@@ -1,6 +1,4 @@
 #
-# = uri.rb
-#
 # URI support for Ruby
 #
 # Author:: Akira Yamada <akira@ruby-lang.org>
@@ -14,8 +12,11 @@
 #
 
 module URI
+  # :stopdoc:
   VERSION_CODE = '000911'.freeze
   VERSION = VERSION_CODE.scan(/../).collect{|n| n.to_i}.join('.').freeze
+  # :startdoc:
+
 end
 
 require 'uri/common'
