@@ -1,3 +1,7 @@
+Sat Jul 17 22:04:44  akira yamada  <akira@ruby-lang.org>
+
+	* lib/uri/ldap.rb: method hierarchical? should be in URI::LDAP.
+
 Sat Jul 17 18:29:07 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* parse.y (stmt): not to show same error messages twice.
